--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.0.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7"
   }
