--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@faker-js/faker": "^9.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "swagger-ui-dist": "^5.18.2"
   }
 }
